src/test/resources/shexTest/negativeStructure/Cycle2Extra.shex
PREFIX :       <http://example.org/>

:S EXTRA :a { :a @:S }
